lab5/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: phoenix
  labels:
    pod-security.kubernetes.io/enforce: baseline
